# python-sdk

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
client/engine/resources/: __init__.py
client/engine/resources/vulnerabilities/: __init__.py
client/management/: client.py
client/management/resources/accounts/: __init__.py  client.py
examples/appsec/: config.ini  main.py
examples/assets-connector/: README.md  config.ini  main.py
examples/async/: README.md  config.ini  main.py
examples/async-operation/: main.py  pyproject.toml
examples/bridge/: README.md  create_synqly_bridge.py  send_requests.py
examples/cloud-security/: config.ini  main.py
examples/edr-connector/: config.ini  main.py
examples/iam-connector/: README.md  config.ini  main.py
examples/in-memory/: main.py
examples/incident-response/: README.md  main.py
examples/notifications-connector/: README.md  main.py
examples/organization_webhooks/: .gitignore  Makefile  README.md  requirements.txt  setup_webhook_demo.sh  webhook_example.py
examples/shared/: utils.py
examples/siem-connector/: README.md  main.py  requirements.txt
examples/siem-query/: README.md  main.py  pyproject.toml
examples/sink-connector/: main.py
examples/storage-connector/: main.py  requirements.txt
examples/sync-accounts/: main.py  requirements.txt  sentinelone-example.json  tenants-example.json
examples/ticketing-connector/: README.md  main.py
examples/vulnerabilities-connector/: main.py
src/engine/: __init__.py  client.py
src/engine/resources/: __init__.py
src/management/: __init__.py  client.py
src/management/core/: client_wrapper.py
src/management/resources/: __init__.py
src/synqly/engine/: README.md  __init__.py  _default_clients.py  client.py  environment.py  reference.md
src/synqly/management/: README.md  __init__.py  client.py  environment.py  reference.md
(+5290 files in other folders)
