[tool.poetry]
name = "SynqlyPythonClient"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "synqly_engine", from = "client/engine"},
    { include = "synqly_management", from = "client/management"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2, < 3"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"