[tool.poetry]
name = "SynqlyPythonClient"
version = "0.1.4"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "engine", from = "src"},
    { include = "management", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.21.2"
pydantic = ">= 2.1.0, < 3"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
