[tool.poetry]
name = "synqly"
version = "0.3.109"
description = "SDK for Synqly APIs"
readme = "README.md"
authors = []
packages = [
    { include = "synqly", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"

[tool.poetry.dev-dependencies]
mypy = "0.971"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
